@startuml

title __DOCTORFACTORY's Class Diagram__\n

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.doctorFactory {
      interface DoctorFactory {
          {abstract} + createDoctor()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.doctorFactory {
      class NormalDoctorfactory {
          + createDoctor()
      }
    }
  }
  

  package com.hospital.Hospital {
    package com.hospital.Hospital.domainService.doctorFactory {
      class SurgeonDoctorFactory {
          + createDoctor()
      }
    }
  }
  

  NormalDoctorfactory -up-|> DoctorFactory
  SurgeonDoctorFactory -up-|> DoctorFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
